Fix the datepicker overflowing on overview and project pages mobile v

--- a/src/styles/_blocks.scss
+++ b/src/styles/_blocks.scss
@@ -44,6 +44,11 @@
   justify-content: center;
   align-items: center;
   margin: auto;
+
+  @media (max-width: 380px) {
+    margin-left: -10px;
+    margin-right: -10px;
+  }
 }
 
 .dates-period {
